--- a/kuwo/client/css/main.less
+++ b/kuwo/client/css/main.less
@@ -164,3 +164,34 @@ body{
 	top: 0;
 	right: 0;
 }
+li.on{
+	a{
+		color: red;
+	}
+}
+.lin{
+	width: 100%;
+	height: 3px;
+	background: #b9d5ee;
+	margin-top: 3px;
+	border-top: 1px solid #79a6cb;
+	border-bottom: 1px solid #79a6cb;
+	.redlin{
+		background: #fdd000;
+		width: 0%;
+		height: 3px;
+		position: relative;
+		&:after{
+			content: " ";
+			display: block;
+			width: 10px;
+			height: 10px;
+			border-radius: 50%;
+			box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+			background-color: white;
+			position: absolute;
+			top: -3px;
+			right: -1px;
+		}
+	}
+}
