--- a/kuwo/client/template/songs.html
+++ b/kuwo/client/template/songs.html
@@ -1,1 +1,14 @@
-songs.html
+<div class="songs-curmbs">
+	<a href="#" class="back"></a>
+	<a href="" class="refrash"></a>
+	<ul>
+		<li><a href="#">首页</a></li>
+		<li><a href="#">排行榜</a></li>
+		<li><a href="#">电台</a></li>
+		<li><a href="#">美女秀</a></li>
+		<li><a href="#">MV</a></li>
+		<li><a href="#">歌手</a></li>
+		<li><a href="#">分类</a></li>
+		<li><a href="#">精选</a></li>
+	</ul>
+</div>
