--- a/kuwo/client/Assets/css/main.less
+++ b/kuwo/client/Assets/css/main.less
@@ -181,6 +181,17 @@ body{
 		dd{
 			line-height: 29px;
 			text-indent: 10px;
+			white-space: nowrap;
+			overflow: hidden;
+			input{
+				border: none;
+				background: none;
+				cursor: pointer;
+				font-family: "微软雅黑";
+				&:focus{
+					outline: none;
+				}
+			}
 		}
 	}
 	.list-content{
