--- a/kuwo/client/Assets/css/main.css
+++ b/kuwo/client/Assets/css/main.css
@@ -1,1 +1,397 @@
-@import url(font-awesome.min.css);body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,fieldset,lengend,button,input,textarea,th,td{margin:0;padding:0}body,button,input,select,textarea{font:12px/1 "宋体",Tahoma,Helvetica,Arial,"\5b8b\4f53",sans-serif;word-break:break-all}h1{font-size:18px}h2{font-size:16px}h3{font-size:14px}h4,h5,h6{font-size:100%}address,cite,dfn,em,var{font-style:normal}code,kbd,pre,samp,tt{font-family:"Courier New",Courier,monospace}small{font-size:12px}ul,ol{list-style:none}a{text-decoration:none}abbr[title],acronym[title]{border-bottom:1px dotted;cursor:help}q:before,q:after{content:''}legend{color:#000}fieldset,img{border:none}button,input,select,textarea{font-size:100%}table{border-collapse:collapse;border-spacing:0}hr{border:none;height:1px}html{overflow-y:scroll}*{box-sizing:border-box}html,body{height:100%;overflow:hidden;position:relative;font-size:12px;font-family:"微软雅黑"}body{background:url(../images/song-pictrue.jpg) no-repeat;background-size:cover}.main-footer{position:absolute;bottom:0;left:0;width:100%;background:#6fc0e2;height:60px;color:white;overflow:hidden;vertical-align:middle}.main-footer a{color:white}.main-footer .music-controller{width:50%;margin:0 auto;font-size:1.5em;line-height:50px;text-align:center}.main-footer .music-controller .play,.main-footer .music-controller .pause{font-size:1.2em}.main-footer .music-controller a{margin:2px;text-shadow:0 0 1px rgba(0,0,0,0.5)}.main-footer .song-message{position:absolute;left:10px}.main-header{width:100%;color:white;overflow:hidden;height:55px;line-height:55px;padding:10px 10px}.main-header a{color:white}.main-header .login{float:left;height:40px;width:160px;font-size:1.2em;line-height:35px}.main-header .login .logo{width:35px;height:35px;float:left;border-radius:50%;background:rgba(0,0,0,0.3);padding:4px}.main-header .login img{max-height:100%;max-width:100%}@media (max-width:480px){.main-header .login{width:10%}.main-header .login .login-text{display:none}}.main-header .menu{width:90%;float:left;font-size:1.2em;line-height:35px}.main-header .menu li{float:left;width:25%;text-align:center}.main-header .menu a{color:white}.main-header .search{height:26px;line-height:26px;border-radius:13px;background:white;border:none;width:230px;float:left;background:rgba(255,255,255,0.5);margin-top:4.5px}@media (max-width:480px){.main-header .search{display:none}}.main-header .search input{border:none;background:none;text-indent:10px;color:#333}.main-header .game{float:left}.main-header .tools-top{float:right;margin-right:10px}.main-content{width:70%;float:left;height:100%;position:relative}.main-content .geci{font-size:1.2em;color:white;line-height:30px;text-align:center}.main-content .tools-bar{position:absolute;background:rgba(255,255,255,0.5);top:0;bottom:0;width:50px}.main-list{width:30%;float:right;background:rgba(255,255,255,0.8);height:100%;color:#333}@media (max-width:480px){.main-list{display:none}}.main-list a{color:#333;white-space:nowrap}.main-list .list-header{font-size:1.2em;height:35px;line-height:35px}.main-list .list-header a{width:25%;display:block;float:left;text-indent:15px}.main-list .list-header a i{margin-right:5px}.main-list .list-title{float:left;width:75px;border-right:1px solid rgba(255,255,255,0.9)}.main-list .list-title dd{line-height:29px;text-indent:10px}.main-list .list-content{height:100%;position:relative}.main-list .list-song-js-box{position:absolute;overflow:hidden;left:80px;right:0;bottom:150px;top:0}.main-list .list-songs li{line-height:32px}.kuwoMenuBox{position:absolute;top:0;right:0}li.on a{color:red}.lin{width:100%;height:3px;background:#b9d5ee;margin-top:3px;border-top:1px solid #79a6cb;border-bottom:1px solid #79a6cb}.lin .redlin{background:#fdd000;width:0;height:3px;position:relative}.lin .redlin:after{content:" ";display:block;width:10px;height:10px;border-radius:50%;box-shadow:1px 1px 1px rgba(0,0,0,0.3);background-color:white;position:absolute;top:-3px;right:-1px}.tools-bottom{position:absolute;top:20px;right:20px}#scroller{position:absolute;z-index:1;-webkit-tap-highlight-color:rgba(0,0,0,0);width:100%;-webkit-transform:translateZ(0);-moz-transform:translateZ(0);-ms-transform:translateZ(0);-o-transform:translateZ(0);transform:translateZ(0);-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-text-size-adjust:none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;-o-text-size-adjust:none;text-size-adjust:none}#scroller ul{list-style:none;padding:0;margin:0;width:100%;text-align:left}#scroller li{padding:0 10px;height:40px;line-height:40px;border-bottom:1px solid #ccc;border-top:1px solid #fff;background-color:#fafafa;font-size:14px}/*# sourceMappingURL=main.css.map */
+@import url(font-awesome.min.css);
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+blockquote,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+fieldset,
+lengend,
+button,
+input,
+textarea,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
+body,
+button,
+input,
+select,
+textarea {
+  font: 12px/1 "宋体", Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
+  word-break: break-all;
+}
+h1 {
+  font-size: 18px;
+}
+h2 {
+  font-size: 16px;
+}
+h3 {
+  font-size: 14px;
+}
+h4,
+h5,
+h6 {
+  font-size: 100%;
+}
+address,
+cite,
+dfn,
+em,
+var {
+  font-style: normal;
+}
+code,
+kbd,
+pre,
+samp,
+tt {
+  font-family: "Courier New", Courier, monospace;
+}
+small {
+  font-size: 12px;
+}
+ul,
+ol {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+abbr[title],
+acronym[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+q:before,
+q:after {
+  content: '';
+}
+legend {
+  color: #000;
+}
+fieldset,
+img {
+  border: none;
+}
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+hr {
+  border: none;
+  height: 1px;
+}
+html {
+  overflow-y: scroll;
+}
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  font-size: 12px;
+  font-family: "微软雅黑";
+}
+body {
+  background: url(../images/song-pictrue.jpg) no-repeat;
+  background-size: cover;
+}
+.main-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #6FC0E2;
+  height: 60px;
+  color: white;
+  overflow: hidden;
+  vertical-align: middle;
+}
+.main-footer a {
+  color: white;
+}
+.main-footer .music-controller {
+  width: 50%;
+  margin: 0 auto;
+  font-size: 1.5em;
+  line-height: 50px;
+  text-align: center;
+}
+.main-footer .music-controller .play,
+.main-footer .music-controller .pause {
+  font-size: 1.2em;
+}
+.main-footer .music-controller a {
+  margin: 2px;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+}
+.main-footer .song-message {
+  position: absolute;
+  left: 10px;
+}
+.main-header {
+  width: 100%;
+  color: white;
+  overflow: hidden;
+  height: 55px;
+  line-height: 55px;
+  padding: 10px 10px;
+}
+.main-header a {
+  color: white;
+}
+.main-header .login {
+  float: left;
+  height: 40px;
+  width: 160px;
+  font-size: 1.2em;
+  line-height: 35px;
+}
+.main-header .login .logo {
+  width: 35px;
+  height: 35px;
+  float: left;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 4px;
+}
+.main-header .login img {
+  max-height: 100%;
+  max-width: 100%;
+}
+@media (max-width: 480px) {
+  .main-header .login {
+    width: 10%;
+  }
+  .main-header .login .login-text {
+    display: none;
+  }
+}
+.main-header .menu {
+  width: 90%;
+  float: left;
+  font-size: 1.2em;
+  line-height: 35px;
+}
+.main-header .menu li {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+.main-header .menu a {
+  color: white;
+}
+.main-header .search {
+  height: 26px;
+  line-height: 26px;
+  border-radius: 13px;
+  background: white;
+  border: none;
+  width: 230px;
+  float: left;
+  background: rgba(255, 255, 255, 0.5);
+  margin-top: 4.5px;
+}
+@media (max-width: 480px) {
+  .main-header .search {
+    display: none;
+  }
+}
+.main-header .search input {
+  border: none;
+  background: none;
+  text-indent: 10px;
+  color: #333;
+}
+.main-header .game {
+  float: left;
+}
+.main-header .tools-top {
+  float: right;
+  margin-right: 10px;
+}
+.main-content {
+  width: 70%;
+  float: left;
+  height: 100%;
+  position: relative;
+}
+.main-content .geci {
+  font-size: 1.2em;
+  color: white;
+  line-height: 30px;
+  text-align: center;
+}
+.main-content .tools-bar {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.5);
+  top: 0;
+  bottom: 0;
+  width: 50px;
+}
+.main-list {
+  width: 30%;
+  float: right;
+  background: rgba(255, 255, 255, 0.8);
+  height: 100%;
+  color: #333;
+}
+@media (max-width: 480px) {
+  .main-list {
+    display: none;
+  }
+}
+.main-list a {
+  color: #333;
+  white-space: nowrap;
+}
+.main-list .list-header {
+  font-size: 1.2em;
+  height: 35px;
+  line-height: 35px;
+}
+.main-list .list-header a {
+  width: 25%;
+  display: block;
+  float: left;
+  text-indent: 15px;
+}
+.main-list .list-header a i {
+  margin-right: 5px;
+}
+.main-list .list-title {
+  float: left;
+  width: 75px;
+  border-right: 1px solid rgba(255, 255, 255, 0.9);
+}
+.main-list .list-title dd {
+  line-height: 29px;
+  text-indent: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.main-list .list-title dd input {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-family: "微软雅黑";
+}
+.main-list .list-title dd input:focus {
+  outline: none;
+}
+.main-list .list-content {
+  height: 100%;
+  position: relative;
+}
+.main-list .list-song-js-box {
+  position: absolute;
+  overflow: hidden;
+  left: 80px;
+  right: 0;
+  bottom: 150px;
+  top: 0;
+}
+.main-list .list-songs li {
+  line-height: 32px;
+}
+.kuwoMenuBox {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+li.on a {
+  color: red;
+}
+.lin {
+  width: 100%;
+  height: 3px;
+  background: #b9d5ee;
+  margin-top: 3px;
+  border-top: 1px solid #79a6cb;
+  border-bottom: 1px solid #79a6cb;
+}
+.lin .redlin {
+  background: #fdd000;
+  width: 0%;
+  height: 3px;
+  position: relative;
+}
+.lin .redlin:after {
+  content: " ";
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  position: absolute;
+  top: -3px;
+  right: -1px;
+}
+.tools-bottom {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+#scroller {
+  position: absolute;
+  z-index: 1;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -o-text-size-adjust: none;
+  text-size-adjust: none;
+}
+#scroller ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  text-align: left;
+}
+#scroller li {
+  padding: 0 10px;
+  height: 40px;
+  line-height: 40px;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #fff;
+  background-color: #fafafa;
+  font-size: 14px;
+}
+/*# sourceMappingURL=main.css.map */
